--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,7 @@ name: CI
 on: push
 jobs:
     lint:
+        name: Lint
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
@@ -14,6 +15,15 @@ jobs:
 
             - name: Lint code
               run: yarn lint:es
+
+    check-builds:
+        name: Check builds
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+
+            - name: Install dependencies
+              run: yarn
 
             - name: Check build (develop)
               run: yarn build:dev
