--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
 
     check-builds:
         name: Check builds
+        needs: lint
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
