--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@types/react-dom": "17.x.x",
         "@types/react-helmet": "6.x.x",
         "@types/react-router": "5.x.x",
+        "@types/react-router-dom": "5.x.x",
         "@types/redux-logger": "3.x.x",
         "@types/webpack": "5.x.x",
         "@types/webpack-env": "1.x.x",
@@ -58,6 +59,7 @@
         "react-i18next": "11.x.x",
         "react-redux": "7.x.x",
         "react-router": "5.x.x",
+        "react-router-dom": "5.x.x",
         "redux": "4.x.x",
         "redux-logger": "3.x.x"
     }
