--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "react-dom": "17.x.x",
         "react-helmet": "6.x.x",
         "react-i18next": "11.x.x",
+        "react-laag": "^2.0.2",
         "react-redux": "7.x.x",
         "react-router": "5.x.x",
         "react-router-dom": "5.x.x",
