--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     },
     "devDependencies": {
         "@hookform/devtools": "3.x.x",
-        "@types/lodash.debounce": "^4.0.6",
+        "@types/lodash.debounce": "4.x.x",
         "@types/node": "14.x.x",
         "@types/react": "17.x.x",
         "@types/react-datepicker": "3.x.x",
@@ -58,7 +58,7 @@
         "history": "4.x.x",
         "i18next": "20.x.x",
         "i18next-xhr-backend": "3.x.x",
-        "lodash.debounce": "^4.0.8",
+        "lodash.debounce": "4.x.x",
         "moment": "2.x.x",
         "query-string": "7.x.x",
         "react": "17.x.x",
@@ -67,7 +67,7 @@
         "react-helmet": "6.x.x",
         "react-hook-form": "7.x.x",
         "react-i18next": "11.x.x",
-        "react-laag": "^2.0.2",
+        "react-laag": "2.x.x",
         "react-redux": "7.x.x",
         "react-router": "5.x.x",
         "react-router-dom": "5.x.x",
