--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     },
     "devDependencies": {
         "@hookform/devtools": "3.x.x",
+        "@types/gapi": "^0.0.39",
+        "@types/gapi.auth2": "^0.0.54",
+        "@types/gapi.client": "^1.0.4",
         "@types/lodash.debounce": "4.x.x",
         "@types/node": "14.x.x",
         "@types/react": "17.x.x",
