--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
         "lint:style": "stylelint \"src/**/*.pcss\"",
         "lint:es": "eslint --ext .ts,.tsx src/",
         "stylelint": "stylelint",
-        "eslint": "eslint"
+        "eslint": "eslint",
+        "export:schemas": "node src/tools/export-schemas/index.js",
+        "generate:types": "node src/tools/generate-types.js"
     },
     "devDependencies": {
         "@hookform/devtools": "3.x.x",
         "@types/gapi": "^0.0.39",
         "@types/gapi.auth2": "^0.0.54",
         "@types/gapi.client": "^1.0.4",
+        "@types/js-cookie": "^2.2.7",
         "@types/lodash.debounce": "4.x.x",
         "@types/node": "14.x.x",
         "@types/react": "17.x.x",
@@ -38,6 +41,7 @@
         "eslint-plugin-react": "7.x.x",
         "eslint-plugin-react-hooks": "4.x.x",
         "html-webpack-plugin": "5.x.x",
+        "json-schema-to-typescript": "^10.1.4",
         "mini-css-extract-plugin": "1.x.x",
         "postcss": "8.x.x",
         "postcss-loader": "5.x.x",
@@ -61,9 +65,12 @@
         "history": "4.x.x",
         "i18next": "20.x.x",
         "i18next-xhr-backend": "3.x.x",
+        "js-cookie": "^2.2.1",
         "lodash.debounce": "4.x.x",
         "moment": "2.x.x",
+        "query-string": "^7.0.1",
         "react": "17.x.x",
+        "react-checkbox-tree": "^1.7.1",
         "react-datepicker": "3.x.x",
         "react-dom": "17.x.x",
         "react-helmet": "6.x.x",
