--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,7 @@ build-img:
     tags:
         - test
     only:
-        - master
+        - master2
         - /^release.*$/
 
 deploy_test:
@@ -76,7 +76,7 @@ deploy_test:
     - docker-compose -p api_test -f docker-compose-review.yml pull || exit 1
     - docker-compose -p api_test -f docker-compose-review.yml up -d
   only:
-    - master
+    - master2
   tags:
     - test
 
