SC-12 Add api to create main-request entity

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
             "dom",
             "es2018.promise",
             "es2016.array.include",
-            "es2017.object"
+            "es2017.object",
+            "esnext"
         ],
         "jsx": "react",
         "strict": true,
