SC-12 specialists filter

--- a/src/tools/export-schemas/mapping.json
+++ b/src/tools/export-schemas/mapping.json
@@ -13,8 +13,6 @@
         "/cv/career/{id}/upload-file/",
         "/cv/certificate/",
         "/cv/certificate/{id}/",
-        "/cv/competence/",
-        "/cv/competence/{id}/",
         "/cv/contact/",
         "/cv/contact/{id}/",
         "/cv/cv/",
@@ -28,6 +26,7 @@
         "/cv/education/{id}/",
         "/cv/position/",
         "/cv/position/{id}/",
+        "/cv/position/{id}/competencies-set/",
         "/cv/position/{id}/delete-file/{file_id}/",
         "/cv/position/{id}/upload-file/",
         "/cv/project/",
