--- a/package.json
+++ b/package.json
@@ -18,16 +18,14 @@
     },
     "devDependencies": {
         "@hookform/devtools": "3.x.x",
-        "@types/gapi": "^0.0.39",
-        "@types/gapi.auth2": "^0.0.54",
-        "@types/gapi.client": "^1.0.4",
-        "@types/js-cookie": "^2.2.7",
+        "@types/js-cookie": "2.x.x",
         "@types/lodash.debounce": "4.x.x",
         "@types/node": "14.x.x",
         "@types/react": "17.x.x",
         "@types/react-datepicker": "3.x.x",
         "@types/react-dom": "17.x.x",
         "@types/react-helmet": "6.x.x",
+        "@types/react-outside-click-handler": "^1.3.0",
         "@types/react-router": "5.x.x",
         "@types/react-router-dom": "5.x.x",
         "@types/react-select": "3.x.x",
@@ -42,7 +40,7 @@
         "eslint-plugin-react": "7.x.x",
         "eslint-plugin-react-hooks": "4.x.x",
         "html-webpack-plugin": "5.x.x",
-        "json-schema-to-typescript": "^10.1.4",
+        "json-schema-to-typescript": "10.x.x",
         "mini-css-extract-plugin": "1.x.x",
         "postcss": "8.x.x",
         "postcss-loader": "5.x.x",
@@ -66,18 +64,20 @@
         "history": "4.x.x",
         "i18next": "20.x.x",
         "i18next-xhr-backend": "3.x.x",
-        "js-cookie": "^2.2.1",
+        "js-cookie": "2.x.x",
+        "jspdf": "^2.3.1",
         "lodash.debounce": "4.x.x",
         "moment": "2.x.x",
-        "query-string": "^7.0.1",
+        "query-string": "7.x.x",
         "react": "17.x.x",
-        "react-checkbox-tree": "^1.7.1",
+        "react-checkbox-tree": "1.x.x",
         "react-datepicker": "3.x.x",
         "react-dom": "17.x.x",
         "react-helmet": "6.x.x",
         "react-hook-form": "7.x.x",
         "react-i18next": "11.x.x",
         "react-laag": "2.x.x",
+        "react-outside-click-handler": "1.x.x",
         "react-redux": "7.x.x",
         "react-router": "5.x.x",
         "react-router-dom": "5.x.x",
