SC-19 Generate new types and schemas

--- a/src/tools/export-schemas/mapping.json
+++ b/src/tools/export-schemas/mapping.json
@@ -58,6 +58,8 @@
         "/dictionary/position/{id}/",
         "/dictionary/type-of-employment/",
         "/dictionary/type-of-employment/{id}/",
+        "/main/organization-project-card-item/",
+        "/main/organization-project-card-item/{id}/",
         "/main/organization-project/",
         "/main/organization-project/{id}/",
         "/main/organization/",
@@ -66,6 +68,7 @@
         "/main/project/{id}/",
         "/main/request-requirement/",
         "/main/request-requirement/{id}/",
+        "/main/request-requirement/{id}/competencies-set/",
         "/main/request-requirement/{id}/cv-link/{cv_id}/",
         "/main/request-requirement/{id}/cv-unlink/{cv_id}/",
         "/main/request-type/",
