--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "outDir": "out",
         "target": "es5",
         "module": "esnext",
         "noImplicitAny": true,
