--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@types/file-saver": "2.x.x",
         "@types/js-cookie": "2.x.x",
         "@types/lodash.debounce": "4.x.x",
+        "@types/lodash.unionby": "4.x.x",
         "@types/node": "14.x.x",
         "@types/react": "17.x.x",
         "@types/react-datepicker": "3.x.x",
@@ -70,6 +71,7 @@
         "js-cookie": "2.x.x",
         "jspdf": "2.x.x",
         "lodash.debounce": "4.x.x",
+        "lodash.unionby": "4.x.x",
         "moment": "2.x.x",
         "query-string": "7.x.x",
         "react": "17.x.x",
