SC-23 create organization project

--- a/src/tools/export-schemas/mapping.json
+++ b/src/tools/export-schemas/mapping.json
@@ -58,7 +58,9 @@
         "/dictionary/position/{id}/",
         "/dictionary/type-of-employment/",
         "/dictionary/type-of-employment/{id}/",
+        "/main/organization-project-card-item-template/",
         "/main/organization-project-card-item/",
+        "/main/organization-project-card-item/create-tree-by-template/{organization_project_id}/{template_root_card_item_id}/",
         "/main/organization-project-card-item/{id}/",
         "/main/organization-project/",
         "/main/organization-project/{id}/",
