SC-28 iteration 4 main ts

--- a/src/tools/export-schemas/mapping.json
+++ b/src/tools/export-schemas/mapping.json
@@ -70,12 +70,18 @@
         "/main/module-position-labor-estimate/{id}/",
         "/main/module/",
         "/main/module/{id}/",
+        "/main/module/{id}/create-request-for-saved-labor-estimate/",
+        "/main/module/{id}/get-expected-labor-estimate/",
+        "/main/module/{id}/get-expected-minus-saved-labor-estimate/",
+        "/main/module/{id}/get-saved-minus-requested-labor-estimate/",
+        "/main/module/{id}/set-expected-labor-estimate-as-saved/",
         "/main/organization-project-card-item-template/",
         "/main/organization-project-card-item/",
         "/main/organization-project-card-item/create-tree-by-template/{organization_project_id}/{template_root_card_item_id}/",
         "/main/organization-project-card-item/{id}/",
         "/main/organization-project/",
         "/main/organization-project/{id}/",
+        "/main/organization-project/{id}/get-saved-labor-estimate/",
         "/main/organization/",
         "/main/organization/{id}/",
         "/main/request-requirement/",
